--- a/css/style.css
+++ b/css/style.css
@@ -1,48 +1,72 @@
-*{
-  font-family: 'Comic Neue', cursive;}
+* {
+  font-family: 'Comic Neue', cursive;
+}
 
-:root{
+:root {
   --main-color: #272b30;
   --secondary-color: #32383e;
   --color-text: #fff;
   --btn-main-color: #272729;
 }
 
-body{
+body {
   background-color: var(--main-color);
   color: var(--color-text);
 }
-.header-img{
-background-position: center;
-background-size: cover;
-max-height: 30vh;
-object-fit: cover;
+
+.header-img {
+  background-position: center;
+  background-size: cover;
+  max-height: 30vh;
+  object-fit: cover;
 }
-.logo-img{
+.logo-img {
   max-width: 40px;
 }
- nav{
+nav {
   background-color: rgb(58, 73, 123) !important;
-    margin-top: -30px;
-    border-radius: 20px;
-    box-shadow: 0 0 10px rgb(0 0 0 / 0.7);
- }
- nav .navbar-brand {
-  color: var(--color-text) ;
+  margin-top: -30px;
+  border-radius: 20px;
+  box-shadow: 0 0 10px rgb(0 0 0 / 0.7);
+}
+nav .navbar-brand {
+  color: var(--color-text);
   font-size: 20px;
- }
+}
 
- .nav-item .nav-link{
-  color: var(--color-text) ;
-  transition: color 0.5s; 
+.nav-item .nav-link {
+  color: var(--color-text);
+  transition: color 0.5s;
+}
 
- }
-
- .nav-item .nav-link:hover{
+.nav-item .nav-link:hover {
   color: #09c !important;
- }
-
- .nav-item .nav-link.active{
+}
+.card {
+  cursor: pointer;
+  background-color: var(--main-color);
+  color: var(--color-text);
+  filter: grayscale(0.7);
+  transition: transform 0.5s, filter 0.5s 0.1s;
+}
+.card:hover {
+  transform: scale(1.05);
+  filter: grayscale(0);
+}
+.nav-item .nav-link.active {
   color: #09c !important;
+}
+.card-body {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+}
 
- }
+.card-body a {
+  margin-top: 32px;
+  width: 100%;
+}
+
+.badge-color {
+  background-color: var(--secondary-color);
+}
